--- a/.travis2.yml
+++ b/.travis2.yml
@@ -1,8 +1,15 @@
-language: android
-dist: bionic
+dist: freebsd
 group: dev
-android:
-  components:
-    - build-tools-26.0.2
-    - android-26
-    - extra
+
+before_script:
+  - echo "Przygotowywanie środowiska przed kompilacją..."
+
+script:
+  - echo "Sprawdzanie instalacji pyenv..."
+  - ls -la /home/travis/.pyenv
+  - ls -la /opt/pyenv
+  - /opt/pyenv/bin/pyenv versions
+  - /opt/pyenv/bin/pyenv global
+  - ls -la /home/travis/.bash_profile
+  - cat /home/travis/.bash_profile | grep pyenv
+  - echo "Zakończenie kompilacji..."
