--- a/.travis.yml
+++ b/.travis.yml
@@ -56,4 +56,4 @@ script:
   - echo "PostgreSQL:"; psql --version
 
   - echo "==== Android ===="
-  - if [ -z "$ANDROID_HOME" ]; then echo "Android SDK: ANDROID_HOME nie ustawione"; else echo "Android SDK: $ANDROID_HOME"; fi
+ # - if [ -z "$ANDROID_HOME" ]; then echo "Android SDK: ANDROID_HOME nie ustawione"; else echo "Android SDK: $ANDROID_HOME"; fi
