--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
+language: android
 dist: bionic
 group: dev
-
-
+android:
+  components:
+    - build-tools-30.0.0
+    - android-30
+    - extras;google;google_play_services
+    - extras;google;m2repository
+    - extras;android;m2repository
 
 before_script:
   - echo "Przygotowywanie środowiska przed kompilacją..."
