--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
-language: android
-dist: bionic
-group: dev
-android:
-  components:
-    - build-tools-30.0.0
-    - android-30
-    - extras;google;google_play_services
-    - extras;google;m2repository
-    - extras;android;m2repository
-
-before_script:
-  - echo "Przygotowywanie środowiska przed kompilacją..."
-  - ant -version || { echo "Ant nie jest zainstalowany lub nie jest w PATH"; exit 1; }
-
+jobs:
+  include:
+  - dist: focal
+  - dist: focal
+    group: previous
+    
+services:
+- postgresql
+addons:
+  postgresql: '12'
+  apt:
+    packages:
+    - postgresql-12
+    - postgresql-client-12
+    - postgresql-server-dev-12
+    - postgresql-12-postgis-3
+    - postgresql-12-postgis-3-scripts
 script:
-  - echo "Zakończenie kompilacji..."
+ - psql --version
