--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,19 @@
 jobs:
   include:
-  - dist: bionic
-  - dist: bionic
-    group: dev
-  - dist: bionic
+  - dist: focal
+  - dist: focal
     group: previous
     
 services:
 - postgresql
 addons:
-  postgresql: '12'
+  postgresql: '13'
   apt:
     packages:
-    - postgresql-12
-    - postgresql-client-12
-    - postgresql-server-dev-12
-    - postgresql-12-postgis-3
-    - postgresql-12-postgis-3-scripts
+    - postgresql-13
+    - postgresql-client-13
+    - postgresql-server-dev-13
+    - postgresql-13-postgis-3
+    - postgresql-13-postgis-3-scripts
 script:
  - psql --version
