--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,20 @@ jobs:
   include:
   - dist: focal
   - dist: focal
+    group: dev
+  - dist: focal
     group: previous
     
 services:
 - postgresql
 addons:
-  postgresql: '13'
+  postgresql: '12'
   apt:
     packages:
-    - postgresql-13
-    - postgresql-client-13
-    - postgresql-server-dev-13
-    - postgresql-13-postgis-3
-    - postgresql-13-postgis-3-scripts
+    - postgresql-12
+    - postgresql-client-12
+    - postgresql-server-dev-12
+    - postgresql-12-postgis-3
+    - postgresql-12-postgis-3-scripts
 script:
  - psql --version
