--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ jobs:
     
 services:
 - postgresql
+
 addons:
   postgresql: '12'
   apt:
@@ -17,6 +18,19 @@ addons:
     - postgresql-server-dev-12
     - postgresql-12-postgis-3
     - postgresql-12-postgis-3-scripts
+
+before_script:
+  
+  - sudo systemctl stop postgresql || true
+ 
+  - sudo pg_dropcluster --stop 13 main || true
+ 
+  - sudo pg_createcluster 12 main
+ 
+  - sudo systemctl start postgresql@12-main
+  
+  - sleep 5
+
 script:
  - psql --version
  - sudo systemctl status postgresql@12-main || true
