postgres focal full test

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 jobs:
   include:
   - dist: focal
+  - dist: focal
+    group: dev
+  - dist: focal
+    group: previous
     
 services:
 - postgresql
