--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,33 @@
-language: android
-dist: focal
-android:
-  components:
-    - build-tools-30.0.0
-    - android-30
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - system-images;android-30;google_apis;x86
-    - system-images;android-30;google_apis;x86
-    - system-images;android-17;default;armeabi-v7a
+jobs:
+  include:
+  - dist: bionic
 
-install: skip
-script: android list target
+    
+services:
+- postgresql
+
+addons:
+  postgresql: '12'
+  apt:
+    packages:
+    - postgresql-12
+    - postgresql-client-12
+    - postgresql-server-dev-12
+    - postgresql-12-postgis-3
+    - postgresql-12-postgis-3-scripts
+
+script:
+ - psql --version
+ - sudo systemctl status postgresql@12-main || true
+ - sudo journalctl -u postgresql@12-main --no-pager | tail -n 100 || true
+ - sudo ls -la /var/lib/postgresql/12/main/ || true
+ - sudo ls -la /etc/postgresql/12/main/ || true
+ - sudo cat /etc/postgresql/12/main/postgresql.conf | grep -E 'port|listen|data_directory' || true
+ - sudo pg_lsclusters || true
+ - sudo systemctl list-units | grep postgres || true
+ - sudo du -sh /var/lib/postgresql/12/main/ || true
+ - df -h || true
+ - sudo netstat -tulpn | grep 5432 || true
+ - sudo ps aux | grep postgres || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT version();" || true
+
