--- a/.travis.yml
+++ b/.travis.yml
@@ -3,33 +3,42 @@ jobs:
   - dist: jammy
   - dist: bionic
   - dist: focal
-  - dist: noble
 
 services:
 - postgresql
 
 addons:
-  postgresql: '17'
+  postgresql: '12'
   apt:
     packages:
-    - postgresql-17
-    - postgresql-client-17
-    - postgresql-server-dev-17
-    - postgresql-17-postgis-3
-    - postgresql-17-postgis-3-scripts
+    - postgresql-12
+    - postgresql-client-12
+    - postgresql-server-dev-12
+    - postgresql-12-postgis-3
+    - postgresql-12-postgis-3-scripts
 
 script:
  - psql --version
- - sudo systemctl status postgresql@17-main || true
- - sudo journalctl -u postgresql@17-main --no-pager | tail -n 100 || true
- - sudo ls -la /var/lib/postgresql/17/main/ || true
- - sudo ls -la /etc/postgresql/17/main/ || true
- - sudo cat /etc/postgresql/17/main/postgresql.conf | grep -E 'port|listen|data_directory' || true
+ - sudo systemctl status postgresql@12-main || true
+ - sudo journalctl -u postgresql@12-main --no-pager | tail -n 100 || true
+ - sudo ls -la /var/lib/postgresql/12/main/ || true
+ - sudo ls -la /etc/postgresql/12/main/ || true
+ - sudo cat /etc/postgresql/12/main/postgresql.conf | grep -E 'port|listen|data_directory' || true
  - sudo pg_lsclusters || true
  - sudo systemctl list-units | grep postgres || true
- - sudo du -sh /var/lib/postgresql/15/main/ || true
+ - sudo du -sh /var/lib/postgresql/12/main/ || true
  - df -h || true
- - sudo netstat -tulpn | grep 5433 || true
+ - sudo netstat -tulpn | grep 5432 || true
  - sudo ps aux | grep postgres || true
- - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5433 -c "SELECT version();" || true
-
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT version();" || true
+ # Dodatkowe sprawdzenia:
+ - sudo find /var/lib/postgresql -type d -name "main" | sort || true
+ - sudo find /etc/postgresql -type d -name "main" | sort || true
+ - sudo grep -r "port =" /etc/postgresql/ || true
+ - sudo pg_lsclusters -h || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT datname, pg_encoding_to_char(encoding), datcollate FROM pg_database;" || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT name, setting FROM pg_settings WHERE name LIKE 'port' OR name LIKE 'listen%' OR name = 'data_directory';" || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT name, default_version, installed_version FROM pg_available_extensions WHERE name = 'postgis';" || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT * FROM pg_stat_activity;" || true
+ - sudo cat /etc/postgresql/12/main/pg_hba.conf || true
+ - dpkg -l | grep postgresql || true
