android docs test

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ android:
     # if you need to run emulator(s) during your tests
     - system-images;android-30;google_apis;x86_64
 
+script:
+  - ./gradlew build
+
 # Cache configuration
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
