--- a/.travis copy v2.yml
+++ b/.travis copy v2.yml
@@ -1,8 +1,10 @@
 jobs:
   include:
+  - dist: jammy
+  - dist: bionic
   - dist: focal
+  - dist: noble
 
-    
 services:
 - postgresql
 
@@ -30,4 +32,14 @@ script:
  - sudo netstat -tulpn | grep 5432 || true
  - sudo ps aux | grep postgres || true
  - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT version();" || true
-
+ # Dodatkowe sprawdzenia:
+ - sudo find /var/lib/postgresql -type d -name "main" | sort || true
+ - sudo find /etc/postgresql -type d -name "main" | sort || true
+ - sudo grep -r "port =" /etc/postgresql/ || true
+ - sudo pg_lsclusters -h || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT datname, pg_encoding_to_char(encoding), datcollate FROM pg_database;" || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT name, setting FROM pg_settings WHERE name LIKE 'port' OR name LIKE 'listen%' OR name = 'data_directory';" || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT name, default_version, installed_version FROM pg_available_extensions WHERE name = 'postgis';" || true
+ - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT * FROM pg_stat_activity;" || true
+ - sudo cat /etc/postgresql/12/main/pg_hba.conf || true
+ - dpkg -l | grep postgresql || true
