--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
+
+before_script:
+  - echo "Starting Android build process..."
+
+
+cript:
+  - echo "Finish Android build process..."
