--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,34 @@
 language: android
 dist: focal
+jdk: openjdk11
+
 android:
   components:
-    # (Optional) Uncomment these if you want to use the latest Android SDK Tools
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
     # - tools
     # - platform-tools
 
-    # BuildTools version recommended for API 30
-    - build-tools;30.0.3
+    # The BuildTools version used by your project
+    - build-tools;30.0.0
 
-    # Android SDK Platform for API 30
+    # The SDK version used to compile your project
     - platforms;android-30
 
     # Additional components
     - extras;google;google_play_services
     - extras;google;m2repository
     - extras;android;m2repository
-
-    # System images for running emulators during tests
     - system-images;android-30;google_apis;x86_64
+
+script:
+  - ./gradlew build
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
