--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ android:
     # - tools
     # - platform-tools
 
-    # The BuildTools version used by your project
-    - build-tools;30.0.0
 
-    # The SDK version used to compile your project
-    - platforms;android-30
+    - build-tools;30.0.0                  # The BuildTools version used by your project
+
+
+    - platforms;android-30                # The SDK version used to compile your project
 
     - extras;android;m2repository         # Android Support Repository (v47.0.0)
     - extras;google;auto                  # Android Auto Desktop Head Unit Emulator (v2.0)
@@ -25,6 +25,15 @@ android:
     - extras;google;simulators            # Android Auto API Simulators (v1)
     - extras;google;webdriver             # Google WebDriver
 
+before_script:
+  # Create an AVD named "test" using a system image for API 30
+  - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
+  # Start the emulator without audio or window
+  - emulator -avd test -no-audio -no-window &
+  # Wait for the emulator to boot
+  - android-wait-for-emulator
+  # Unlock the emulator screen
+  - adb shell input keyevent 82 &
 
 script:
   - ./gradlew build
@@ -38,3 +47,4 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
+
