--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ android:
     - extras;google;simulators            # Android Auto API Simulators (v1)
     - extras;google;webdriver             # Google WebDriver
     - system-images;android-30;google_apis;x86_64
+    - emulator
+    
 before_script:
   # Create an AVD named "test" using a system image for API 30
   - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
