--- a/.travis.yml
+++ b/.travis.yml
@@ -26,12 +26,12 @@ android:
     - extras;google;webdriver             # Google WebDriver
     - system-images;android-30;google_apis;x86_64
     - emulator
-    
+
 before_script:
   # Create an AVD named "test" using a system image for API 30
   - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
   # Start the emulator without audio or window
-  - emulator -avd test -no-audio -no-window &
+  - /usr/local/android-sdk/emulator -avd test -no-audio -no-window &
   # Wait for the emulator to boot
   - android-wait-for-emulator
   # Unlock the emulator screen
