--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,12 @@ android:
     - emulator
 
 before_script:
+  - export PATH=$ANDROID_HOME/emulator:$PATH
+  - source ~/.bashrc
   # Create an AVD named "test" using a system image for API 30
   - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
   # Start the emulator without audio or window
-  - /usr/local/android-sdk/emulator -avd test -no-audio -no-window &
+  - emulator -avd test -no-audio -no-window &
   # Wait for the emulator to boot
   - android-wait-for-emulator
   # Unlock the emulator screen
