--- a/.travis4.yml
+++ b/.travis4.yml
@@ -1,6 +1,5 @@
 language: android
-dist: bionic
-group: dev
+dist: focal
 jdk: openjdk11
 
 android:
@@ -10,25 +9,36 @@ android:
     # - tools
     # - platform-tools
 
-    # The BuildTools version used by your project
-    - build-tools;30.0.0
+    - build-tools;30.0.0                  # The BuildTools version used by your project
+    - platforms;android-30                # The SDK version used to compile your project
 
-    # The SDK version used to compile your project
-    - platforms;android-30
-
-    # Additional components
-    - extras;google;google_play_services
-    - extras;google;m2repository
-    - extras;android;m2repository
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
+    - extras;android;m2repository         # Android Support Repository (v47.0.0)
+    - extras;google;auto                  # Android Auto Desktop Head Unit Emulator (v2.0)
+    - extras;google;google_play_services  # Google Play services (v49)
+    - extras;google;instantapps           # Google Play Instant Development SDK (v1.9.0)
+    - extras;google;m2repository          # Google Repository (v58)
+    - extras;google;market_apk_expansion  # Google Play APK Expansion library (v1)
+    - extras;google;market_licensing      # Google Play Licensing Library (v1)
+    - extras;google;simulators            # Android Auto API Simulators (v1)
+    - extras;google;webdriver             # Google WebDriver
     - system-images;android-30;google_apis;x86_64
+
+before_script:
+  - export PATH=$ANDROID_HOME/emulator:$PATH
+  - source ~/.bashrc
+  # Create an AVD named "test" using a system image for API 30
+  - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
+  # Start the emulator without audio or window
+  - emulator -avd test -no-audio -no-window &
+  # Wait for the emulator to boot
+  - android-wait-for-emulator
+  # Unlock the emulator screen
+  - adb shell input keyevent 82 &
 
 script:
   - ./gradlew build
+  - /usr/local/android-sdk/cmdline-tools/bin/sdkmanager --sdk_root=/usr/local/android-sdk --list
 
-# Cache configuration
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -37,3 +47,4 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
+
