--- a/.travis4.yml
+++ b/.travis4.yml
@@ -7,8 +7,7 @@ android:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
     # - tools
-    # - platform-tools
-
+    - platform-tools
     - build-tools;30.0.0                  # The BuildTools version used by your project
     - platforms;android-30                # The SDK version used to compile your project
 
