--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,9 @@ android:
     - system-images;android-30;google_apis;x86_64
 
 before_script:
-  - export PATH=$ANDROID_HOME/emulator:$PATH
-  - source ~/.bashrc
+  - export ANDROID_HOME=/usr/local/android-sdk
+  - export ANDROID_SDK_ROOT=/usr/local/android-sdk
+  - export PATH=$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH
   # Create an AVD named "test" using a system image for API 30
   - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
   # Start the emulator without audio or window
